[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 100.0
margin_bottom = 30.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="."]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 30.0
text = "Lives: 3"

[node name="CoinsLabel" type="Label" parent="."]
margin_left = 240.0
margin_right = 340.0
margin_bottom = 30.0
text = "Coins: 0/0"